--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,8 @@
 /*===========================================================
 
    Template Name: Shahryar - Personal Portfolio React Template
-   Author: Harnish Design
-   Author URL: https://themeforest.net/user/harnishdesign
+   Author: Shahryar Faisal
+   Author URL: https://github.com/shahryfaisal
    File Description : Main css file of the template
 	
 =================================================
